Fix italic math falling back to built-in font - Italics are in Mathematical Alphanumeric Symbols. This block is huge though (214kb), so just include the italic latin characters. Ensure code and math fonts show the built in font while being downloaded. - Better to have a flash of unstyled text than a long flash of no text. - Also add explict fallbacks so reasonable fonts are picked if they can't be downloaded. Looked into math being a little squished on Chrome - I can fix carets / hats being too close without affecting Firefox. - Couldn't find a way to add spacing around || without affect Firefox. The below works, but makes Firefox look bad.     ```     mi[mathvariant="normal"] + :not(mi[mathvariant="normal"]),     :not(mi[mathvariant="normal"]) + mi[mathvariant="normal"] {     	padding-left: 2px;     }     ```

--- a/assets/res/main.css
+++ b/assets/res/main.css
@@ -431,7 +431,6 @@ th, td {
 	a {
 		display: block;
 		font-size: 44px;
-		font-family: code;
 		font-size: 44px;
 		text-decoration: none;
 	}
@@ -455,7 +454,7 @@ th, td {
 /* Code */
 
 code, annotation, .symbol, .code, li.task-list-item::before {
-	font-family: code;
+	font-family: code, monospace;
 	font-feature-settings: "ss01";
 	font-size-adjust: ex-height 0.48;
 }
@@ -1124,7 +1123,6 @@ body.error {
 .post-link {
 	display: block;
 	outline-offset: 3px;
-	padding: 0 20px;
 	text-decoration: none;
 
 	&.draft {
@@ -1176,7 +1174,7 @@ body.error {
 /* Math */
 
 math {
-	font-family: math2;
+	font-family: math2, math;
 	cursor: text;
 }
 
@@ -1237,6 +1235,11 @@ math[display="block"] mtr mtd:not([class]) + mtd:not([class]) {
 .no-mathml math[display="block"] semantics,
 .no-mathml math[display="block"] annotation {
 	display: block;
+}
+
+mover[accent="true"] mo {
+	position: relative;
+	bottom: 2px;
 }
 
 /* ---------------------------------------------------------------------------------------------- */
